--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=709d255e8a1eefe461253d86af3c1a64
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root@127.0.0.1:3306/SportNet?serverVersion=8&charset=utf8mb4"
+DATABASE_URL="mysql://root@127.0.0.1:3306/SportNet?serverVersion=mariadb-10.4.27"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
